@@ -1,5 +1,3 @@
 
 ADD_SUBDIRECTORY(libopenjpip)
-ADD_SUBDIRECTORY(opj_server)
-ADD_SUBDIRECTORY(opj_client)
-ADD_SUBDIRECTORY(tools)
+ADD_SUBDIRECTORY(util)
